<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <Space
        android:layout_width="0px"
        android:layout_height="match_parent"
        android:layout_weight="5" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="90"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/math_series"
                android:textAllCaps="true" />

            <Switch
                android:id="@+id/type"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/geometric_series"
                android:textAllCaps="true" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="10"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="3"
                android:text="@string/insert_the_first_object_in_the_series"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/firstObject"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="5"
                android:ems="10"
                android:inputType="numberSigned|numberDecimal" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="10"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="3"
                android:text="@string/insert_the_distance_of_the_series"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/distance"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="5"
                android:ems="10"
                android:inputType="numberSigned|numberDecimal" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="20" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="7"
            android:orientation="horizontal">

            <Space
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:onClick="showTheSeries"
                android:text="@string/show_the_series"
                android:textColorHint="#FFFFFF"
                app:backgroundTint="@color/cardview_dark_background" />

            <Space
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="5" />
    </LinearLayout>

    <Space
        android:layout_width="0px"
        android:layout_height="match_parent"
        android:layout_weight="5" />
</LinearLayout>